inserti middle article

--- a/index.html
+++ b/index.html
@@ -21,8 +21,41 @@
     <figure>
           <img src="img/tim-1.jpg" alt="Tim1">
           <img src="img/tim-2.jpg" alt="Tim2">
-             <figcaption><small>1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke</small></<figcaption>
+             <figcaption>1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke<figcaption>
     </figure>
+    <!-- Article Middle -->
+    <section>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo itaque ex alias, laboriosam tenetur animi rem incidunt dolore porro nesciunt molestiae exercitationem sit quas cum blanditiis magnam, beatae natus voluptatum, ipsum placeat asperiores facilis.</p>
+    </section>
+    <section>
+        <ul>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquame erat volutpat.</li>
+            <li>Ut wisi enim ad minim veniam,quis nostrud exerci tation ullamcorpersuscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquame erat volutpat.</li>
+        </ul>
+    </section>
+    <table>
+        <tr>
+            <th>Lorem ipsmum dolor</th>
+            <th>Lorem ipsmum dolor</th>
+            <th>Lorem ipsmum dolor</th>
+        </tr>
+        <tr>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+        </tr>
+        <tr>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem ipsmum dolor</td>
+            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+        </tr>
+    </table>
     </main>
 
     <footer>
