--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </figure>
     <!-- Article Middle -->
     <section>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo itaque ex alias, laboriosam tenetur animi rem incidunt dolore porro nesciunt molestiae exercitationem sit quas cum blanditiis magnam, beatae natus voluptatum, ipsum placeat asperiores facilis.</p>
+             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum laboriosam aliquam impedit repudiandae tempore animi libero beatae cupiditate molestiae.Eaque veritatis voluptatibus ipsum id odio hic maxime nostrum quos aliquam?<span class="yellowbacktext"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Facere, ipsa? Similique deserunt minus iste atque ullam, enim aspernatur, sit mollitia consequuntur tempora esse nemo distinctio nisi cumque dolores non aut? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </section>
     <section>
         <ul>
@@ -34,32 +34,40 @@
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquame erat volutpat.</li>
         </ul>
     </section>
-    <table>
-        <tr>
-            <th>Lorem ipsmum dolor</th>
-            <th>Lorem ipsmum dolor</th>
-            <th>Lorem ipsmum dolor</th>
-        </tr>
-        <tr>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
-        </tr>
-        <tr>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem ipsmum dolor</td>
-            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
-        </tr>
-    </table>
-    </main>
-
+        <table>
+            <tr>
+                <th class="smallcolumn ">Lorem ipsum dolor</th>
+                <th  class="smallcolumn">Lorem ipsum dolor</th>
+                <th class="largecolumn">Lorem ipsum dolor</th>
+            </tr>
+            <tr class="color-row">
+                <td  class="smallcolumn">Lorem ipsum dolor</td>
+                <td  class="smallcolumn">Lorem ipsum dolor</td>
+                <td class="largecolumn">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+            </tr>
+            <tr>
+                <td  class="smallcolumn">Lorem ipsum dolor</td>
+                <td class="smallcolumn">Lorem ipsum dolor</td>
+                <td class="largecolumn">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+            </tr>
+            <tr class="color-row">
+                <td class="smallcolumn">Lorem ipsum dolor</td>
+                <td class="smallcolumn">Lorem ipsum dolor</td>
+                <td class="largecolumn">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
+            </tr>
+        </table>
+        <section>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda culpa, pariatur sit odio aliquid nobis excepturi doloribus quo esse accusamus deleniti, modi eaque adipisci animi a autem. Quis, minus aspernatur est numquam adipisci exercitationem. Temporibus voluptas animi molestiae fugit tenetur provident similique dicta nisi doloribus libero, architecto blanditiis rerum non! Sit aspernatur obcaecati tempora autem alias reiciendis, corrupti officiis eos, <span class="yellowbacktext">molestias, nisi dolore. Facere aliquid accusamus ipsum recusandae!</span> Error magni voluptates optio ea, vero nobis dignissimos ducimus repellendus! Quam in labore ad eligendi est rem natus ea consequuntur corrupti asperiores qui eius vitae, quasi maiores veritatis voluptates laboriosam id nulla!</p>
+        </section>
+      </main>
     <footer>
-
+       <h3>Potrebbero interessarti</h3>
+          <div>
+              <img  src="img/monitor.jpg" alt="Monitor">
+          </div>
+          <div>
+              <img src="img/graph.jpg" alt="Graph">
+          </div>
     </footer>
 </body>
 </html>
