--- a/index.html
+++ b/index.html
@@ -21,19 +21,16 @@
     <figure>
           <img src="img/tim-1.jpg" alt="Tim1">
           <img src="img/tim-2.jpg" alt="Tim2">
-             <figcaption>1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke<figcaption>
+             <p class="caption">1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke<p>
     </figure>
     <!-- Article Middle -->
-    <section>
              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rerum laboriosam aliquam impedit repudiandae tempore animi libero beatae cupiditate molestiae.Eaque veritatis voluptatibus ipsum id odio hic maxime nostrum quos aliquam?<span class="yellowbacktext"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Facere, ipsa? Similique deserunt minus iste atque ullam, enim aspernatur, sit mollitia consequuntur tempora esse nemo distinctio nisi cumque dolores non aut? Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    </section>
-    <section>
         <ul>
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquame erat volutpat.</li>
             <li>Ut wisi enim ad minim veniam,quis nostrud exerci tation ullamcorpersuscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
             <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit,sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquame erat volutpat.</li>
         </ul>
-    </section>
+        <!-- Table -->
         <table>
             <tr>
                 <th class="smallcolumn ">Lorem ipsum dolor</th>
@@ -56,9 +53,7 @@
                 <td class="largecolumn">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur, explicabo iure nobis voluptatibus magnam a molestiae. Laudantium ipsum impedit aperiam.</td>
             </tr>
         </table>
-        <section>
                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda culpa, pariatur sit odio aliquid nobis excepturi doloribus quo esse accusamus deleniti, modi eaque adipisci animi a autem. Quis, minus aspernatur est numquam adipisci exercitationem. Temporibus voluptas animi molestiae fugit tenetur provident similique dicta nisi doloribus libero, architecto blanditiis rerum non! Sit aspernatur obcaecati tempora autem alias reiciendis, corrupti officiis eos, <span class="yellowbacktext">molestias, nisi dolore. Facere aliquid accusamus ipsum recusandae!</span> Error magni voluptates optio ea, vero nobis dignissimos ducimus repellendus! Quam in labore ad eligendi est rem natus ea consequuntur corrupti asperiores qui eius vitae, quasi maiores veritatis voluptates laboriosam id nulla!</p>
-        </section>
       </main>
     <footer>
        <h3>Potrebbero interessarti</h3>
